--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         </div>
         <div class="anggota">
-            <a href="../anggota/index.html">Anggota</a>
+            <a href="https://cheeekzzz.github.io/anggota.github.io/">Anggota</a>
         </div>
        
         <div class="bubbles">
