menyambungkan ke fiksi

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         </div>
         <div class="anggota">
-            <a href="https://cheeekzzz.github.io/anggota.github.io/">Anggota</a>
+            <a href="https://cheeekzzz.github.io/anggota.github.io">Anggota</a>
         </div>
        
         <div class="bubbles">
@@ -43,7 +43,7 @@
     </div>
    
     <div class="content">
-        <a href="../Fiksi/index.html">Fiksi</a>
+        <a href="https://cheeekzzz.github.io/fiksi.github.io">Fiksi</a>
         <a href="../Non fiksi/index.html">Non Fiksi</a>
         </div>
     
