menyambungkan ke non fiksi

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    
     <div class="content">
         <a href="https://cheeekzzz.github.io/fiksi.github.io">Fiksi</a>
-        <a href="../Non fiksi/index.html">Non Fiksi</a>
+        <a href="https://cheeekzzz.github.io/non-fiksi.github.io">Non Fiksi</a>
         </div>
     
 </body>
