--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
    
     <div class="content">
-        <a href="https://cheeekzzz.github.io/fiksi.github.io">Fiksi</a>
+        <a href="https://cheeekzzz.github.io/fiksii.github.io/">Fiksi</a>
         <a href="https://cheeekzzz.github.io/non-fiksi.github.io">Non Fiksi</a>
         </div>
     
